add get all videos api