@@ -1,5 +1,6 @@
 package com.company.waseem_20210814.service;
 
+import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
@@ -9,6 +10,7 @@ import java.nio.file.Paths;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
+import org.springframework.util.FileSystemUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.company.waseem_20210814.exception.EntityNotFoundException;
@@ -17,12 +19,18 @@ import com.company.waseem_20210814.exception.FileUploadException;
 @Service
 public class LocalFileSystemStorageService implements StorageService {
 
-    private Path PATH_TO_UPLOAD = Paths.get("/Users/hammad.waseem/upload");
+    public LocalFileSystemStorageService() throws IOException {
+        String path = System.getProperty("user.home")+"/upload";
+        Files.createDirectories(Path.of(path));
+        this.pathToUpload = Paths.get(path);
+    }
+
+    private Path pathToUpload;
 
     @Override
     public String store(final MultipartFile file) throws FileUploadException, FileAlreadyExistsException {
         try {
-            var path = PATH_TO_UPLOAD.resolve(file.getOriginalFilename());
+            var path = pathToUpload.resolve(file.getOriginalFilename());
             Files.copy(file.getInputStream(), path);
             return path.toString();
         }
@@ -36,7 +44,7 @@ public class LocalFileSystemStorageService implements StorageService {
     @Override
     public Resource load(String filename) throws EntityNotFoundException, MalformedURLException {
 
-        Resource resource = new UrlResource(PATH_TO_UPLOAD.resolve(filename).toUri());
+        Resource resource = new UrlResource(pathToUpload.resolve(filename).toUri());
 
         if (resource.exists() || resource.isReadable()) {
             return resource;
@@ -44,5 +52,9 @@ public class LocalFileSystemStorageService implements StorageService {
             throw new EntityNotFoundException("file");
         }
 
+    }
+
+    @Override public void delete(final String filePath) throws IOException {
+        FileSystemUtils.deleteRecursively(pathToUpload.resolve(filePath));
     }
 }
